# Tauri-PwdMngr

./: README.md
PwdMngr/: package-lock.json  package.json
PwdMngr/src/: add-password.html  edit-password.html  export-passwords.html  index.html  login.html  register.html
PwdMngr/src-tauri/: Cargo.toml  tauri.conf.json
PwdMngr/src-tauri/capabilities/: default.json
PwdMngr/src-tauri/icons/: icon.icns
PwdMngr/src-tauri/migrations/: 20250228184826_user_table.sql  20250228184836_password_table.sql
PwdMngr/src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs  models.rs  user_state.rs
PwdMngr/src/css/: auth.css  edit-password.css  export-import.css  index.css  main.css  password-form.css
PwdMngr/src/js/: addPassword.js  auth.js  editPassword.js  exportImport.js  main.js
