[package]
name = "pwdmngr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pwdmngr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["chrono", "json", "runtime-tokio", "tls-rustls", "uuid"] }
chrono = { version = "0.4.40", features = ["serde"] }
argon2 = "0.5.3"
rand = "0.9.0"
ring = "0.17.11"
base64 = "0.22.1"
thiserror = "2.0.11"
anyhow = "1.0.96"
arrayref = "0.3.9"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2.6.0"

